# bittool

./: CMakeLists.txt  DroidSansFallback.cpp  DroidSansFallback.h  README.md  gen_lang.py  lang.csv  main.cpp
unix/: bittool.desktop
win32/: mingw-w64-x86_64.cmake  resources.rc
